<resources>
    <string name="app_name">Hunger Reliever</string>
    <string name="view_profile">View Profile</string>
    <string name="notifications">Notifications</string>
    <string name="donate_food">Donate Food</string>
    <string name="logout">Logout</string>
    <string name="my_history">My History</string>
    <string name="donate_money">Donate Money</string>
    <string name="navigation_drawer_open">Navigation Drawer Opened</string>
    <string name="navigation_drawer_close">Navigation Drawer Closed</string>
    <string name="donation_history">Donation History</string>
    <string name="donations_received">Donations Received</string>
    <string name="home">Home</string>

    <string name="food_donors">Food Donors</string>
    <string name="org_navigation_drawer_open">Open Org Navigation Drawer</string>
    <string name="org_navigation_drawer_close">Close Org Navigation Drawer</string>
</resources>