<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/org_nav_home"
            android:icon="@drawable/ic_org_home"
            android:title="@string/home"/>
        <item android:id="@+id/org_nav_view_profile"
            android:icon="@drawable/ic_org_view_profile"
            android:title="@string/view_profile"/>
        <item android:id="@+id/org_nav_donations_received"
            android:icon="@drawable/ic_donations_received"
            android:title="@string/donations_received"/>
        <item android:id="@+id/org_nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>

</menu>